# IMAP-mcp

./: .coverage  .gitignore  LICENSE  README.md  config.json.example  pyproject.toml
.github/workflows/: ci.yml  integration.yml
src/imap_mcp/: __init__.py  __main__.py  _sending.py  accounts.py  attachments.py  cache.py  imap_client.py  mail_utils.py  models.py  providers.py  server.py  sieve.py  watcher.py
tests/: conftest.py  test_01_connection.py  test_02_mailboxes.py  test_03_emails.py  test_04_search.py  test_05_actions.py  test_06_stats.py  test_07_cache.py  test_08_auto_archive.py  test_09_persistent_cache.py  test_10_load_cache.py  test_11_namespace_retry.py  test_12_date_conversion.py  test_13_status_parsing.py  test_14_write_mode.py  test_15_accounts.py  test_16_folder_ops.py  test_17_drafts_spam_meta.py  test_18_thread_fts_sieve.py  test_19_mail_utils.py  test_20_summary_bulk_health.py  test_21_idem_html_safety.py  test_22_maint_keepalive_resources.py  test_23_bundles.py  test_24_bundles2.py  test_25_coverage.py  test_26_more_coverage.py  test_27_attachment_text.py  test_28_condstore_async.py  test_29_polish.py
tests/integration/: conftest.py  test_basic_flow.py
