[project]
name = "imap-mcp"
version = "1.0.0"
description = "MCP server for IMAP email with persistent encrypted cache, offline analysis, and cross-platform secure credential storage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "IMAP-MCP Contributors" },
]
keywords = ["mcp", "imap", "email", "cache", "ai", "claude", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
]
dependencies = [
    "mcp>=1.0.0",
    "imapclient>=3.0.0",
    "pydantic>=2.0.0",
    "keyring>=25.0.0",
    "cryptography>=43.0.0",
    "bleach[css]>=6.0.0",
    "icalendar>=5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/newlc/IMAP-mcp"
Repository = "https://github.com/newlc/IMAP-mcp"
Issues = "https://github.com/newlc/IMAP-mcp/issues"

[project.scripts]
imap-mcp = "imap_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imap_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
